--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ proc-macro = true
 [dependencies]
 quote = "1"
 proc-macro2 = "1"
-syn = { version = "1", default-features = false, features = ["parsing"] }
+syn = { version = "1", features = ["full", "extra-traits"] }
 
 [dev-dependencies]
 termcolor = "1"
