--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,6 @@ version = "0.1.0"
 authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
 edition = "2018"
 
-[lib]
-proc-macro = true
-
 [dependencies]
-quote = "1"
-proc-macro2 = "1.0.19"
-syn = { version = "1", features = ["full", "extra-traits"] }
-
-[dev-dependencies]
+bunt-macro = { path = "macro"}
 termcolor = "1"
