--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,18 @@ version = "0.1.0"
 authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
 edition = "2018"
 
+description = """
+Simple macros to write colored and formatted text to a terminal.
+Based on `termcolor`, thus also cross-platform.
+"""
+documentation = "https://docs.rs/bunt/"
+repository = "https://github.com/LukasKalbertodt/bunt/"
+readme = "README.md"
+license = "MIT/Apache-2.0"
+
+keywords = ["color", "term", "terminal", "format", "style"]
+categories = ["command-line-interface"]
+
 [dependencies]
 bunt-macro = { path = "macro"}
 termcolor = "1"
