Add license field for `bunt-macros`

--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -3,7 +3,9 @@ name = "bunt-macros"
 version = "0.1.0"
 authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
 edition = "2018"
+
 description = "Helper crate for `bunt`. Please see that crate's docs for more information."
+license = "MIT/Apache-2.0"
 
 [lib]
 proc-macro = true
