Exclude `.github` folder in `Cargo.toml`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT/Apache-2.0"
 
 keywords = ["color", "term", "terminal", "format", "style"]
 categories = ["command-line-interface"]
+exclude = [".github"]
 
 [dependencies]
 bunt-macros = { version = "0.1.0", path = "macros" }
