--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -11,5 +11,6 @@ license = "MIT/Apache-2.0"
 proc-macro = true
 
 [dependencies]
-quote = "1"
 proc-macro2 = "1.0.19"
+quote = "1"
+unicode-xid = "0.2.1"
