Treat `bunt-macros` as internal code & clarify its lack of API stability
`bunt-macros` should be considered implementation detail. People must
not depend on it directly. It won't follow semantic versioning.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,5 @@ categories = ["command-line-interface"]
 exclude = [".github"]
 
 [dependencies]
-bunt-macros = { version = "0.2.2", path = "macros" }
+bunt-macros = { version = "=0.2.2", path = "macros" }
 termcolor = "1"
