--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -15,6 +15,7 @@ license = "MIT/Apache-2.0"
 proc-macro = true
 
 [dependencies]
+litrs = "0.2.3"
 proc-macro2 = "1.0.19"
 quote = "1"
 unicode-xid = "0.2.1"
